--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
+    "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.8",
+    "@headlessui/react": "^1.7.17",
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.17",
     "next": "14.0.2",
